[FEAT] delete meal in plan api
