# routes/api.php
@@ -77,6 +77,7 @@ Route::middleware('auth:api')->group(function () {
             Route::post('duplicate-plan/{id}', [PlanController::class, 'duplicatePlan']);
             Route::get('/get-client-plan/{user_id}', [PlanController::class, 'getClientPlans']);
             Route::delete('/delete-item-plan/{plan_id}/{meal_id}/{item_id}', [PlanController::class, 'deleteItemFromPlan']);
+            Route::delete('/delete-meal-plan/{plan_id}/{meal_id}', [PlanController::class, 'deleteMealFromPlan']);
         });
 
 
